--- a/example/res/index.html
+++ b/example/res/index.html
@@ -1,5 +1,7 @@
+<!DOCTYPE html>
 <html>
 <head>
+<meta http-equiv="Content-Type" content="text/html; charset=utf-8">
 <title>JSON-RPC Tester</title>
 <script src="./jquery.js"></script>
 <script type="text/javascript">
