--- a/src/examples/index.html
+++ b/src/examples/index.html
@@ -5,6 +5,11 @@
 <meta content="utf-8" http-equiv="encoding">
 <title>Title of the document</title>
 <script src="http://code.jquery.com/jquery-2.1.1.min.js" type="text/javascript"></script>
+<!--
+    This file needs to be generated using jsonrpcstub:
+    cd build
+    ./bin/jsonrpcstub ../src/examples/spec.json --js-client=StubClient --js-client-file=../src/examples/stubclient.js
+-->
 <script src="stubclient.js" type="text/javascript"></script>
 <script type="text/javascript">
 
